--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-PORT=4000
+PORT=https://harry-photo-backend.vercel.app/
 MONGO_URL=mongodb+srv://malikrizwan1777:CVxrQNuNoMv4Npuc@cluster0.bitr0qp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 SECRET=harryphotouser123
