--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "frontend",
+  "name": "ashfaqahmed",
+  "homepage": "https://curatedgallery.org/harry-photos"
   "private": true,
   "version": "0.0.0",
   "type": "module",
