--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ashfaqahmed",
-  "homepage": "https://curatedgallery.org/harry-photos"
+  "homepage": "https://curatedgallery.org/harry-photos",
   "private": true,
   "version": "0.0.0",
   "type": "module",
