--- a/.github/workflows/ftpdeploy.yml
+++ b/.github/workflows/ftpdeploy.yml
@@ -11,7 +11,7 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.5
       with:
-        FTP_SERVER: abaidullah@hp.curatedgallery.org
-        FTP_USERNAME:  http://ftp.curatedgallery.org
-        FTP_PASSWORD: ${{ secrets.9AtBDQ0sZQAB }}
+        FTP_SERVER: abaidullah@hp.curatedgallery.org,
+        FTP_USERNAME:  http://ftp.curatedgallery.org,
+        FTP_PASSWORD: ${{ secrets.9AtBDQ0sZQAB }},
         dry-run: true
