--- a/.github/workflows/deploycpanel.yml
+++ b/.github/workflows/deploycpanel.yml
@@ -12,7 +12,7 @@ jobs:
     - name:  Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.5
       with:
-        server: abaidullah@hp.curatedgallery.org
-        username: http://ftp.curatedgallery.org
+        server: http://ftp.curatedgallery.org
+        username: abaidullah@hp.curatedgallery.org 
         password: ${{ secrets.FTP_PASSWORD }}
 
