--- a/.github/workflows/deploycpanel.yml
+++ b/.github/workflows/deploycpanel.yml
@@ -1,18 +1,30 @@
 
-on: push
-name:  Deploy website on push
-jobs:
-  web-deploy:
-    name:  Deploy
-    runs-on: ubuntu-latest
-    steps:
-    - name:  Get latest code
-      uses: actions/checkout@v4
-    
-    - name:  Sync files
-      uses: SamKirkland/FTP-Deploy-Action@v4.3.5
-      with:
-        Server: http://ftp.curatedgallery.org
-        Username: abaidullah@hp.curatedgallery.org 
-        password: ${{ secrets.FTP_PASSWORD }}
+                    - name: FTP Deployer
+  # You may pin to the exact commit or the version.
+  # uses: sand4rt/ftp-deployer@518beaad91d1b18fd55a69321de7ed89080d2ae3
+  uses: sand4rt/ftp-deployer@v1.8
+  with:
+    # SFTP on
+    sftp: # optional
+    # FTP host URL like: ftp.host.com or sftp.host.com
+    host: http://ftp.curatedgallery.org
+    # FTP port
+    port: # optional, default is 21
+    # Ftp username
+    username: abaidullah@hp.curatedgallery.org 
+    # Ftp password
+    password: ${{ secrets.FTP_PASSWORD }}
+    # The remote folder location of your FTP server
+    remote_folder: # optional
+    # The local folder location
+    local_folder: # optional, default is dist
+    # Remove existing files inside FTP remote folder
+    cleanup: # optional
+    # includes
+    include: # optional
+    # exclude
+    exclude: # optional
+    # passive
+    passive: # optional
+          
 
