--- a/.github/workflows/deploycpanel.yml
+++ b/.github/workflows/deploycpanel.yml
@@ -14,4 +14,4 @@ jobs:
         server: ftp.curatedgallery.org
         username: live@curatedgallery.org
         password: ${{ secrets.FTP_PASSWORDLIVE }}
-        remote_dir: "/Build"
+        local_dir: "/Build"
