--- a/backend/compose.yml
+++ b/backend/compose.yml
@@ -4,7 +4,7 @@ services:
   backend:
     build: .
     ports:
-      - 5000:5000
+      - 80:${PORT}
     environment:
       MONGO_URI: "${MONGO_URL}"
 
